spacing issue

--- a/app/assets/stylesheets/queries.css.scss
+++ b/app/assets/stylesheets/queries.css.scss
@@ -26,7 +26,9 @@
   text-align: center;
 }
 
-.all-vines {}
+.all-vines {  text-align: center;
+list-style-type: none;
+}
 
 .play-link {
   position: fixed;
